syntax = "proto3";

package resources.users;

import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/galexrt/fivenet/gen/go/proto/resources/users;users";

message Job {
  string name = 1 [(validate.rules).string.max_len = 50]; // @gotags: sql:"primary_key" alias:"name"
  string label = 2 [(validate.rules).string.max_len = 50];
  repeated JobGrade grades = 3;
}

message JobGrade {
  optional string job_name = 1 [(validate.rules).string.max_len = 50];
  int32 grade = 2 [(validate.rules).int32.gt = 0];
  string label = 3 [(validate.rules).string.max_len = 50];
}

message JobProps {
  string job = 1 [(validate.rules).string.max_len = 20];
  string theme = 2 [(validate.rules).string.max_len = 20];
  string livemap_marker_color = 3 [(validate.rules).string = {
    len: 6,
    pattern: "^[A-Fa-f0-9]{6}$",
  }];
  // @sanitize: method=StripTags
  string quick_buttons = 4;
  optional uint64 discord_guild_id = 5;
  optional DiscordBotMode discord_mode = 6;
  optional resources.timestamp.Timestamp discord_last_sync = 7;
}

enum DiscordBotMode {
  DISCORD_BOT_MODE_UNSPECIFIED = 0;
  DISCORD_BOT_MODE_ADDITIVE = 1;
  DISCORD_BOT_MODE_SUBSTRACTIVE = 2;
}
